# TelethonBot_RedirectMSG

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bot.spec  main.py  proxies.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
src/bot/: __init__.py  __main__.py  config.py  handler.py  logging_setup.py  media.py  paths.py  proxy.py  routing.py  session.py  ttlset.py
tests/: test_config.py  test_paths.py  test_proxy.py  test_routing.py  test_ttlset.py
